# django-slack-processor

./: .dockerignore  .gitignore  CODEOWNERS  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: publish_test.yml  test.yml
slackbot/: __init__.py  admin.py  apps.py  base.py  models.py
slackbot/management/commands/: resync_slack.py  resync_slack_messages.py  run_bot.py
slackbot/migrations/: 0001_initial_20210729.py  0002_delete_analyticsbot.py  0003_auto_20210915_1137.py  0004_slack_messages.py
testapp/: requirements.txt
testapp/testapp/: settings.py  slack.py  urls.py
testapp/testapp/management/commands/: test_setup.py
testapp/tests/: test_arg_parser.py  test_resync_slack.py  test_resync_slack_messages.py  test_run_bot.py
