[metadata]
name = django-slack-processor
version = attr: slackbot.__version__
description = Django app to manage a slack bot with support for custom message processors
author = PPB - InfoSec Engineering
author_email = surface@paddypowerbetfair.com
url = https://github.com/surface-security/django-slack-processor
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Environment :: Web Environment
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.0, <4
    slack-sdk==3.19.2
    # FIXME: make locks an optional dependency (and use, in the run_bot command)
    django-database-locks < 1
    django-logbasecommand < 1

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = slackbot

[coverage:report]
show_missing = True
skip_covered = True
